--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgba(0,0,0,0.8);">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">ClashCoder</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
                 <li class="nav-item ">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
-               
+
             </ul>
             <ul class="nav justify-content-end">
                 <li class="logout">
@@ -43,7 +43,7 @@
                 <li class="login">
                     <button type="button" class="btn btn-danger" id="log-out">Logout</button>
                 </li>
-              </ul>
+            </ul>
 
         </div>
 
@@ -65,17 +65,28 @@
                 <div class="modal-body">
                     <form id="signup-form">
                         <div class="form-group">
+                            <label for="User">Username</label>
+                            <input type="text" class="form-control" id="user" name="User" required>
+                        </div>
+                        <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="Email" aria-describedby="emailHelp">
+                            <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" required>
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                                 else.</small>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="Password" name="Password">
+                            <input type="password" class="form-control" id="Password1" name="Password" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword2">Confirm Password</label>
+                            <input type="password" class="form-control" id="Password2" name="Password" required>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
-                        <p class="error pink-text center-align"></p>
+                        <p class="error text-danger center-align"></p>
+                        <!-- <div class="spinner-border text-secondary " role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div> -->
                     </form>
                 </div>
             </div>
@@ -98,18 +109,23 @@
                     <form id="login-form">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="login-Email" aria-describedby="emailHelp">
+                            <input type="email" class="form-control" id="login-Email" aria-describedby="emailHelp"
+                                required>
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                                 else.</small>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="login-Password" name="Password">
+                            <input type="password" class="form-control" id="login-Password" name="Password" required>
                             <p id="login-status"></p>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
-                        <p class="error pink-text center-align"></p>
+                        <p class="error text-danger center-align"></p>
                     </form>
+                    <div class="modal-footer mt-3">
+                        <div>Don't you have an account?<a data-toggle="modal" 
+                             data-dismiss="modal" data-target="#signupModal">Signup</a></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -124,13 +140,27 @@
 
 
 
-<div class="container">
-    <p id="status"></p>
-</div>
+    <div class="container">
+        <p id="status"></p>
+    </div>
 
 
+    <div class="container">
+        <div class="col-xl-4 col-lg-4">
+            <form id="comment">
+                <div class="form-group">
+                    <!-- <label for="exampleFormControlTextarea1">Comments:</label> -->
+                    <textarea class="form-control" id="comment-text" rows="3" placeholder="write something here"
+                        required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+        <div>Comments:</div>
+        <div class="todo border" style="background-color: rgba(0,0,0,0.1); border-radius: 10px;">
 
-
+        </div>
+    </div>
 
 
 
@@ -160,6 +190,7 @@
         const db = firebase.firestore();
     </script>
     <script src="auth.js"></script>
+    <script src="https://unpkg.com/uuid@latest/dist/umd/uuidv4.min.js"></script>
     <script src="jquery.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
